chore: modifying .gitignore
Avoid user specific environment set up to spread over all branch.

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,7 @@ media
 
 # If you are using PyCharm # 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+.idea/
 
 # AWS User-specific
 .idea/**/aws.xml
