--- a/.gitignore
+++ b/.gitignore
@@ -136,14 +136,12 @@ GitHub.sublime-settings
 !.vscode/extensions.json 
 .history
 
-<<<<<<< Updated upstream
 pyvenv.cfg
 lib64
 bin
 .idea
-=======
+.idea/**
 include
 Scripts
 pyvenv.cfg
->>>>>>> Stashed changes
 */migrations
